added scroll functionality to index, directions accordion to map & other minor bug fixes

--- a/public/sass/partials/_aside.scss
+++ b/public/sass/partials/_aside.scss
@@ -98,6 +98,9 @@ aside.aside {
 }
 
 @include touch {
+  .side-message {
+    width: 0 !important;
+  }
   .section,
   nav.navbar {
     @include transition(margin-left);
