--- a/views/mixins/_overviewTile.pug
+++ b/views/mixins/_overviewTile.pug
@@ -3,7 +3,7 @@ mixin overviewTile(title, stat, icon)
         .card.tile.is-child
             .card-content
                 .level.is-mobile
-                    .level-item
+                    .level-item.has-text-centered
                         .is-widget-label
                             h3.subtitle.is-size-4.mb-1.is-spaced= `${title}`
                             h1.title.has-text-weight-semibold.is-size-3= `${stat}`
