--- a/views/mixins/_workingHoursInput.pug
+++ b/views/mixins/_workingHoursInput.pug
@@ -1,11 +1,11 @@
-mixin workingHoursInput(day, open = null)
+mixin workingHoursInput(day, open = null, enabled = true)
     - var workingHours = ['',''];
     - if(open !== null) workingHours = open.split('-');
     .field.is-grouped.is-horizontal.is-align-items-center.working-hours
         label.has-text-weight-semibold(for='day') #{day}
-        input.switch.is-rounded.pt-0(type='checkbox' id=`switch${day}` checked=`${open === null ? 'false' : 'true'}` disabled=`${open === null ? 'true' : 'false'}`)
+        input.switch.is-rounded.pt-0(type='checkbox' id=`switch${day}` name=`switch${day}` checked=open!==null disabled=enabled!==true)
         label.pt-0(for=`switch${day}`) .
-        label.mx-3(for='start-time') From
-        input.input(type="time" value=workingHours[0] placeholder="--:--" name=`start-time` disabled)
+        label.mx-3(for='startTime') From
+        input.input(type="time" value=workingHours[0] placeholder="--:--" name=`start${day}` time-interval="start" disabled)
         label.mx-3(for='finish-time') To
-        input.input(type="time" value=workingHours[1] placeholder="--:--" name=`finish-time` disabled)
+        input.input(type="time" value=workingHours[1] placeholder="--:--" name=`finish${day}` time-interval="finish" disabled)
