--- a/public/sass/partials/_map.scss
+++ b/public/sass/partials/_map.scss
@@ -5,12 +5,19 @@
     width: 100%;
     height: 50%;
 }
-#directions-panel {
+.directions {
     display: none;
-    width: 100%;
-    height: 50%;
-    overflow-y: scroll;
+    .is-collapsible {
+        display: none;
+        &.is-active {
+            display: initial;
+        }
+        #directions-panel {
+            width: 100%;
+        }
+    }
 }
+
 .adp table {
     font-family: $family-primary !important;
     &.adp-directions {
