--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block prepend mainMenu
   +indexMenu()
 
 block content
-  section.hero
+  section.hero.page-section(data-section="#home")
     .hero-body.is-flex.is-align-items-center
       .container.is-widescreen
           .columns.is-vcentered.is-align-items-center
@@ -20,12 +20,13 @@ block content
               p.subtitle.is-size-6-mobile.is-size-5-tablet
                 | Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                 | sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
-              button.button.is-primary.is-large.is-hidden-touch Discover more
+              button.button.is-primary.is-large.is-hidden-touch.nav__link(data-section="#about") Discover more
               .is-flex.is-justify-content-center.is-hidden-desktop
-                button.button.is-primary.is-medium Discover more
+                button.button.is-primary.is-medium.nav__link(data-section="#about") Discover more
             .column.is-6-desktop.is-7-fullhd.is-hidden-mobile
               img.hero-illustration(src="heroIllustration.svg")
-  +sectionTitle('Our goals')
+  .page-section.has-text-light(data-section="#about") -
+  +sectionTitle('Our goals', '')
   .section.has-text-centered
     .container.is-widescreen
       .tile.is-ancestor
@@ -85,7 +86,7 @@ block content
         allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
         allowfullscreen='')
   section.section.is-medium
-    +sectionTitle(`See what we're up to!`)
+    +sectionTitle("See what we're up to!", "#contact")
     p.is-size-5.has-text-centered.mb-6
       | Keep up to date with all that's going on with pantree!
       br
@@ -108,6 +109,9 @@ block content
       ion-icon(size="large" name="logo-facebook")
     a.icon.has-text-primary.mx-3.mt-2
       ion-icon(size="large" name="logo-instagram")
+block prepend scripts
+  script(src="/dist/js/indexMenuHandler.js")
+
 
 
 
