--- a/views/mixins/_tableRowFridge.pug
+++ b/views/mixins/_tableRowFridge.pug
@@ -12,6 +12,6 @@ mixin tableRowFridge(donation, page)
             small.has-text-grey #{new Date(donation.expiryDate).toLocaleDateString('en-GB')}
         td.is-actions-cell
             .buttons.is-right
-                button.button.is-small.is-link(type='button') View
-                if donation.claimed !== false
+                a.button.is-small.is-link(href=`/donations/donation/${donation.id}`) View
+                if donation.claimed === true
                     button.button.is-small.is-danger(type='button') Cancel
