--- a/views/mixins/_donationTable.pug
+++ b/views/mixins/_donationTable.pug
@@ -9,7 +9,7 @@ mixin donationTable(tableTitle, donations = {}, conditionClaimed = false, condit
           .card-content
             .b-table.has-pagination
               .table-wrapper.has-mobile-cards
-                table.table.is-fullwidth.is-hoverable.is-fullwidth
+                table.table.is-fullwidth.is-hoverable.is-fullwidth.is-striped
                   if establishmentType === 'Fridge'
                     thead
                       tr
