added collection functionality

--- a/views/donations.pug
+++ b/views/donations.pug
@@ -29,7 +29,7 @@ block append content
             .card-content
               #directions-panel
             .card-footer
-              a.card-footer-item.has-text-danger(href="#") Cancel directions
+              a.card-footer-item.has-text-danger.cancel-directions(href="#") Cancel directions
         .modal.has-align-items-center
           .modal-background
           .modal-card
