--- a/views/mixins/_tableRowFridge.pug
+++ b/views/mixins/_tableRowFridge.pug
@@ -12,6 +12,7 @@ mixin tableRowFridge(donation, page, index)
             small.has-text-grey #{new Date(donation.expiryDate).toLocaleDateString('en-GB')}
         td.is-actions-cell
             .buttons.is-right
-                a.button.is-small.is-link(href=`/donations/donation/${donation.id}`) View
-                if donation.claimed === true
-                    button.button.is-small.is-danger(type='button') Cancel
+                if donation.collected === false
+                    a.button.is-small.is-link(href=`/donations/donation/${donation.id}`) View
+                if donation.claimed === true && donation.collected === false
+                    button.button.is-small.is-danger.cancelBtn(type='button') Cancel
