--- a/views/mixins/_tableRowBusiness.pug
+++ b/views/mixins/_tableRowBusiness.pug
@@ -19,6 +19,6 @@ mixin tableRowBusiness(donation, page, index)
                 if donation.claimed === false
                     a.button.is-small.is-link(href=`/donations/donation/${donation.id}`) View
                 if donation.collected === false && donation.claimed === true
-                    button.button.is-small.is-link.collectBtn(type='button') Collected
-                if donation.collected === false
+                    button.button.is-small.is-success.collectBtn(type='button') Collected
+                if donation.collected === false && title !== 'Donations'
                     button.button.is-small.is-danger.deleteBtn(type='button') Delete
