updated copy on landing page

--- a/views/index.pug
+++ b/views/index.pug
@@ -18,8 +18,8 @@ block content
               p.title.is-size-3-mobile.is-size-2-tablet
                 | Reducing food waste!
               p.subtitle.is-size-6-mobile.is-size-5-tablet
-                | Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                | sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+                | Pantree is a web app focused on reduce food waste.
+                | Our goal is to establish a strong link between community fridges and local food businesses and help save food which would otherwise go to waste.
               button.button.is-primary.is-large.is-hidden-touch.nav__link(data-section="#about") Discover more
               .is-flex.is-justify-content-center.is-hidden-desktop
                 button.button.is-primary.is-medium.nav__link(data-section="#about") Discover more
@@ -81,7 +81,7 @@ block content
   section.section
     .container.is-widescreen
       figure.image.is-16by9
-        iframe( class="has-ratio" width='1182' height='665' src='https://www.youtube.com/embed/dyQ1F31_tBk'
+        iframe( class="has-ratio" width='1182' height='665' src='https://www.youtube.com/embed/WS70RpkfreQ'
         title='YouTube video player' frameborder='0'
         allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
         allowfullscreen='')
