implemented scheduled deletion for exp. donations and fixed opening hours input on small devices

--- a/public/sass/partials/_form.scss
+++ b/public/sass/partials/_form.scss
@@ -77,3 +77,11 @@ img.illustration {
     object-fit: contain;
   }
 }
+@include mobile {
+  .working-hours {
+    display: block !important;
+    label[for="startTime"] {
+      width: 100% !important;
+    }
+  }
+}
