--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,7 @@ block content
               p.title.is-size-3-mobile.is-size-2-tablet
                 | Reducing food waste!
               p.subtitle.is-size-6-mobile.is-size-5-tablet
-                | Pantree is a web app focused on reduce food waste.
+                | Pantree is a web app focused on reducing food waste.
                 | Our goal is to establish a strong link between community fridges and local food businesses and help save food which would otherwise go to waste.
               button.button.is-primary.is-large.is-hidden-touch.nav__link(data-section="#about") Discover more
               .is-flex.is-justify-content-center.is-hidden-desktop
@@ -80,11 +80,11 @@ block content
           a.button.is-primary.is-medium.mt-5.is-hidden-tablet(href="/register") Join us today!
   section.section
     .container.is-widescreen
-      figure.image.is-16by9
-        iframe( class="has-ratio" width='1182' height='665' src='https://www.youtube.com/embed/WS70RpkfreQ'
-        title='YouTube video player' frameborder='0'
-        allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
-        allowfullscreen='')
+      figure.image.is-16by9.video
+        video(class="has-ratio" poster="thumbnail.png" controls)
+          source(src='pantree-trailer-final.mp4' type='video/mp4')
+          source(src='pantree-trailer-final.webm' type='video/webm')
+          | Your browser does not support the video tag.
   section.section.is-medium
     +sectionTitle("See what we're up to!", "#contact")
     p.is-size-5.has-text-centered.mb-6
@@ -92,22 +92,22 @@ block content
       br
       | Follow us on Twitter, Facebook and Instagram.
     .buttons.is-flex.is-justify-content-center
-      a.button.is-large.is-round.is-primary.is-light.mx-5.my-3(href="https://twitter.com/wearepantree")
+      a.button.is-large.is-round.is-primary.is-light.mx-5.my-3(href="https://twitter.com/wearepantree" target="_blank")
         span.icon
           ion-icon(size="large" name="logo-twitter")
-      a.button.is-large.is-round.is-primary.is-light.mx-5.my-3(href="https://www.facebook.com/wearepantree/")
+      a.button.is-large.is-round.is-primary.is-light.mx-5.my-3(href="https://www.facebook.com/wearepantree/" target="_blank")
         span.icon
           ion-icon(size="large" name="logo-facebook")
-      a.button.is-large.is-round.is-primary.is-light.mx-5.my-3(href="https://www.instagram.com/wearepantree/")
+      a.button.is-large.is-round.is-primary.is-light.mx-5.my-3(href="https://www.instagram.com/wearepantree/" target="_blank")
         span.icon
           ion-icon(size="large" name="logo-instagram")
   section.section.is-small.has-background-white.has-text-centered
     p Copyright © 2021 Pantree UK. All rights reserved.
-    a.icon.has-text-primary.mx-3.mt-2
+    a.icon.has-text-primary.mx-3.mt-2(href="https://twitter.com/wearepantree" target="_blank")
       ion-icon(size="large" name="logo-twitter")
-    a.icon.has-text-primary.mx-3.mt-2
+    a.icon.has-text-primary.mx-3.mt-2(href="https://www.facebook.com/wearepantree/" target="_blank")
       ion-icon(size="large" name="logo-facebook")
-    a.icon.has-text-primary.mx-3.mt-2
+    a.icon.has-text-primary.mx-3.mt-2(href="https://www.instagram.com/wearepantree/" target="_blank")
       ion-icon(size="large" name="logo-instagram")
 block prepend scripts
   script(src="/dist/js/indexMenuHandler.js")
